force-app/main/default/objects/AcctSeed__Accounting_Variable__c/AcctSeed__Accounting_Variable__c.object-meta.xml
<CustomObject>
    <description>Used to categorize or group general ledger transactions, profit centers, cost centers, geographies, or lines of offerings based on business need.</description>
    <label>Accounting Variable</label>
    <nameField>
        <label>Accounting Variable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounting Variables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>