force-app/main/default/objects/AcctSeed__Accounting_Variable__c/fields/AcctSeed__Active__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Active allows for selection of the variable in several filtered lookups.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>