force-app/main/default/objects/AcctSeed__Accounting_Variable__c/fields/AcctSeed__Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Type__c</fullName>
    <inlineHelpText>Used to determine GL Account Variables 1-4 and Time Card Variables 1-2.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GL Account Variable 1</fullName>
            </value>
            <value>
                <fullName>GL Account Variable 2</fullName>
            </value>
            <value>
                <fullName>GL Account Variable 3</fullName>
            </value>
            <value>
                <fullName>GL Account Variable 4</fullName>
            </value>
            <value>
                <fullName>Time Card Variable 1</fullName>
            </value>
            <value>
                <fullName>Time Card Variable 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>