force-app/main/default/objects/AcctSeed__Accounting_Variable__c/fields/Uniquefier__c.field-meta.xml
<CustomField>
    <fullName>Uniquefier__c</fullName>
    <label>Uniquefier</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>