force-app/main/default/objects/AcctSeed__Accounting_Variable__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship with the User for GL Account Variable 4</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounting_Variables</relationshipName>
    <type>Lookup</type>
</CustomField>