force-app/main/default/objects/AcctSeed__Accounting_Variable__c/listViews/AcctSeed__All.listView-meta.xml
<ListView>
    <fullName>AcctSeed__All</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Type__c</columns>
    <columns>AcctSeed__Active__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>