force-app/main/default/objects/AcctSeed__Accounting_Variable__c/listViews/AcctSeed__GL_Account_Variable_2.listView-meta.xml
<ListView>
    <fullName>AcctSeed__GL_Account_Variable_2</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Type__c</columns>
    <columns>AcctSeed__Active__c</columns>
    <columns>Burden__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Type__c</field>
        <operation>equals</operation>
        <value>GL Account Variable 2</value>
    </filters>
    <label>GL Account Variable 2 - Department</label>
    <language>en_US</language>
</ListView>