force-app/main/default/objects/AcctSeed__Accounting_Variable__c/listViews/AcctSeed__GL_Account_Variable_3.listView-meta.xml
<ListView>
    <fullName>AcctSeed__GL_Account_Variable_3</fullName>
    <columns>NAME</columns>
    <columns>Tax_Rate_Provincial__c</columns>
    <columns>Tax_Rate_Retail__c</columns>
    <columns>Tax_Rate_Provincial_Statutory__c</columns>
    <columns>Tax_is_Harmonized__c</columns>
    <columns>AcctSeed__Type__c</columns>
    <columns>AcctSeed__Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Type__c</field>
        <operation>equals</operation>
        <value>GL Account Variable 3</value>
    </filters>
    <label>GL Account Variable 3 - Tax Zone</label>
</ListView>