force-app/main/default/objects/AcctSeed__Accounting_Variable__c/listViews/AcctSeed__Time_Card_Variable_2.listView-meta.xml
<ListView>
    <fullName>AcctSeed__Time_Card_Variable_2</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Type__c</columns>
    <columns>AcctSeed__Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Type__c</field>
        <operation>equals</operation>
        <value>Time Card Variable 2</value>
    </filters>
    <label>Time Card Variable 2</label>
</ListView>